[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pre-commit-hooks"
version = "0.1.0"
description = "Custom pre-commit hooks for my projects"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
flake8 = "^4.0.1"
flake8-bugbear = "*"
flake8-docstrings = "*"
isort = "*"
